# creative-system-app

./: .eslintrc.cjs  .gitignore  BATCH 01  BATCH 02  BATCH 03  BATCH 04  BATCH 05  BATCH 06  BATCH 07  BATCH 08  BATCH 09  BATCH 11  BATCH 12  BATCH 13  BATCH 16  INTRO  README.md  batch 10  batch 14  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  SETUP_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
