[package]
name = "creative-system-app"
version = "0.1.0"
description = "Star Platinum — Creative Intelligence System for Rap Production"
authors = []
license = ""
repository = ""
default-run = "creative-system-app"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "creative-system-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
