[package]
name = "creative-system-app"
version = "0.1.0"
description = "Creative System - Music Brainstorming App"
authors = []
license = ""
repository = ""
default-run = "creative-system-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
